# ob-multi-model-search-demo

./: .gitignore  README.md  api.py  logging.conf  pyproject.toml  test_api.py  ui.py
obmms/: __init__.py
obmms/agents/: __init__.py  agent.py  consult_agent.py  extract_agent.py  plan_agent.py  summary_agent.py
obmms/app/: __init__.py  agent_flow.py  stateless_agent_flow.py
obmms/data/: attraction_data_preprocessor.py
obmms/llm/: __init__.py  llm.py  tongyi.py
obmms/prompt/: __init__.py  prompt_list.py
obmms/tools/: __init__.py  ob_mms_tool.py  tool.py
tests/: test_agent_flow.py  test_consult_agent.py  test_extract_agent.py  test_obmms_tool.py  test_tongyi_llm.py
