[tool.poetry]
name = "obmms"
version = "0.1.0"
description = "A demo for OceanBase multi-model search"
authors = ["shanhaikang.shk <shanhaikang.shk@oceanbase.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dashscope = "^1.20.12"
pydantic = "^2.9.2"
pytest = "^8.3.3"
pandas = "^2.2.3"
pyobvector = "0.1.18"
tqdm = "^4.66.6"
streamlit = "^1.40.0"
folium = "^0.18.0"
streamlit-folium = "^0.23.1"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
